--- a/.github/工作流程/ibm.yml
+++ b/.github/工作流程/ibm.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
-      run: 
+      run: |
         ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
 
